ci-cd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirazsec-service
spec:
  selector:
    app: mirazsec
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
