ci-cd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirazsec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: mirazsec-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: mirazsec-service
            port:
              number: 5000
